--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
